Update MAP to AMP
http://code.google.com/p/maven-android-plugin/wiki/PluginRenamed

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -135,7 +135,7 @@
             </plugin>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>maven-android-plugin</artifactId>
+				<artifactId>android-maven-plugin</artifactId>
                 <configuration>
                     <androidManifestFile>${project.build.directory}/filtered-manifest/AndroidManifest.xml</androidManifestFile>
                 </configuration>
@@ -211,7 +211,7 @@
                     <!-- the signed apk then needs to be zipaligned -->
                     <plugin>
                         <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                        <artifactId>maven-android-plugin</artifactId>
+                        <artifactId>android-maven-plugin</artifactId>
                         <inherited>true</inherited>
                         <configuration>
                             <sign>
