--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -62,7 +62,7 @@
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>maven-android-plugin</artifactId>
+				<artifactId>android-maven-plugin</artifactId>
                 <configuration>
                         <extractDuplicates>true</extractDuplicates>
                 </configuration>
