--- a/pom.xml
+++ b/pom.xml
@@ -270,8 +270,8 @@
                 </os>
             </activation>
             <properties>
-                <rt.jar.path>${java.home}/jre/lib/rt.jar</rt.jar.path>
-                <jsse.jar.path>${java.home}/jre/lib/jsse.jar</jsse.jar.path>
+                <rt.jar.path>${java.home}/lib/rt.jar</rt.jar.path>
+                <jsse.jar.path>${java.home}/lib/jsse.jar</jsse.jar.path>
             </properties>
         </profile>
         <!-- mac profile has to be after unix since running on mac will trigger both -->
