--- a/pom.xml
+++ b/pom.xml
@@ -110,12 +110,15 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.0.0-alpha-11</version>
+                    <version>3.0.0-alpha-14</version>
                     <extensions>true</extensions>
                     <configuration>
-                        <jvmArguments>
+                        <dex>
+                          <jvmArguments>
+                            <jvmArgument>-Xms256m</jvmArgument>
                             <jvmArgument>-Xmx512m</jvmArgument>
-                        </jvmArguments>
+                          </jvmArguments>
+                        </dex>
                         <sdk>
                             <platform>10</platform>
                         </sdk>
@@ -125,7 +128,6 @@
                         <zipalign>
                             <verbose>true</verbose>
                         </zipalign>
-                        <deleteConflictingFiles>true</deleteConflictingFiles>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
                     </configuration>
                 </plugin>
