--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.0.0-alpha-14</version>
                     <extensions>true</extensions>
                     <configuration>
                         <dex>
