Is this all it takes?!
http://code.google.com/p/maven-android-plugin/issues/detail?id=233

--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -24,12 +24,13 @@
 			<artifactId>agit</artifactId>
             <version>${project.version}</version>
 			<type>apk</type>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>agit</artifactId>
             <version>${project.version}</version>
-			<scope>compile</scope>
+            <scope>provided</scope>
 			<type>jar</type>
 		</dependency>
         <dependency>
