--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -139,13 +139,12 @@
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>android-maven-plugin</artifactId>
                 <configuration>
+                    <proguard>
+                        <skip>false</skip>
+                    </proguard>
                     <androidManifestFile>${project.build.directory}/filtered-manifest/AndroidManifest.xml</androidManifestFile>
                 </configuration>
 			</plugin>
-            <plugin>
-                <groupId>com.pyx4me</groupId>
-                <artifactId>proguard-maven-plugin</artifactId>
-            </plugin>
 		</plugins>
 	</build>
 
