--- a/proguard.cfg
+++ b/proguard.cfg
@@ -56,3 +56,4 @@
 
 -keepclassmembers class * extends android.app.Activity { public void *(android.view.View); }
 
+-keep class org.apache.commons.io.IOUtils
