--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
                     <version>3.0.2</version>
                     <extensions>true</extensions>
                     <configuration>
+                        <!--
+                        <proguard>
+                            <skip>false</skip>
+                            <config>../proguard.cfg</config>
+                        </proguard>
+                        -->
                         <sdk>
                             <platform>14</platform>
                         </sdk>
