Fix maven build issues
Always ensure that both the 'apk' and'jar' dependency of the 'impl' project
have scope 'provided'.

The 'commons-io' exclusion in agit-integration-tests is necesssary to avoid
this error:

W/dalvikvm( 2242): Class resolved by unexpected DEX: Lcom/madgag/agit/MarkdownActivityBase;(0x40514e90):0x2aecb8 ref [Lorg/apache/commons/io/IOUtils;] Lorg/apache/commons/io/IOUtils;(0x40514e90):0x2a34e8
W/dalvikvm( 2242): (Lcom/madgag/agit/MarkdownActivityBase; had used a different Lorg/apache/commons/io/IOUtils; during pre-verification)
D/AndroidRuntime( 2242): Shutting down VM
W/dalvikvm( 2242): threadid=1: thread exiting with uncaught exception (group=0x40015560)
E/AndroidRuntime( 2242): FATAL EXCEPTION: main
E/AndroidRuntime( 2242): java.lang.IllegalAccessError: Class ref in pre-verified class resolved to unexpected implementation
E/AndroidRuntime( 2242): 	at com.madgag.agit.MarkdownActivityBase.loadMarkdown(MarkdownActivityBase.java:39)
E/AndroidRuntime( 2242): 	at com.madgag.agit.MarkdownActivityBase.onCreate(MarkdownActivityBase.java:30)
E/AndroidRuntime( 2242): 	at android.app.Instrumentation.callActivityOnCreate(Instrumentation.java:1047)
E/AndroidRuntime( 2242): 	at android.app.ActivityThread.performLaunchActivity(ActivityThread.java:1611)
E/AndroidRuntime( 2242): 	at android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:1663)
E/AndroidRuntime( 2242): 	at android.app.ActivityThread.access$1500(ActivityThread.java:117)
E/AndroidRuntime( 2242): 	at android.app.ActivityThread$H.handleMessage(ActivityThread.java:931)
E/AndroidRuntime( 2242): 	at android.os.Handler.dispatchMessage(Handler.java:99)
E/AndroidRuntime( 2242): 	at android.os.Looper.loop(Looper.java:130)
E/AndroidRuntime( 2242): 	at android.app.ActivityThread.main(ActivityThread.java:3683)
E/AndroidRuntime( 2242): 	at java.lang.reflect.Method.invokeNative(Native Method)
E/AndroidRuntime( 2242): 	at java.lang.reflect.Method.invoke(Method.java:507)
E/AndroidRuntime( 2242): 	at co

--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -12,52 +12,61 @@
 
 	<packaging>apk</packaging>
 	<name>Agit integration tests</name>
-	<dependencies>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>toy-ssh-agent</artifactId> <!-- Needs to come before Agit -->
-			<version>1.4</version>
-			<type>apk</type>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>agit</artifactId>
-            <version>${project.version}</version>
-			<type>apk</type>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>agit</artifactId>
-            <version>${project.version}</version>
-			<scope>compile</scope>
-			<type>jar</type>
-		</dependency>
+    <dependencies>
         <dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>agit-test-utils</artifactId>
+            <groupId>com.madgag</groupId>
+            <artifactId>toy-ssh-agent</artifactId>
+            <version>1.4</version>
+            <type>apk</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.madgag</groupId>
+            <artifactId>agit</artifactId>
             <version>${project.version}</version>
-		</dependency>
+            <scope>provided</scope>
+            <type>apk</type>
+        </dependency>
+        <dependency>
+            <groupId>com.madgag</groupId>
+            <artifactId>agit</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.madgag</groupId>
+            <artifactId>agit-test-utils</artifactId>
+            <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-io</artifactId>
+                    <groupId>commons-io</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
         </dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>calculon</artifactId>
-			<version>1.0.5-UNOFFICIAL-BUILD</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.android</groupId>
-			<artifactId>android-test</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>mini-git-server-war</artifactId>
-			<version>0.4</version>
-			<type>war</type>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.madgag</groupId>
+            <artifactId>calculon</artifactId>
+            <version>1.0.5-UNOFFICIAL-BUILD</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android-test</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.madgag</groupId>
+            <artifactId>mini-git-server-war</artifactId>
+            <version>0.4</version>
+            <type>war</type>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -67,10 +76,6 @@
                         <extractDuplicates>true</extractDuplicates>
                 </configuration>
 			</plugin>
-            <plugin>
-                <groupId>com.pyx4me</groupId>
-                <artifactId>proguard-maven-plugin</artifactId>
-            </plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.5</version>
@@ -97,7 +102,7 @@
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.1.1</version>
+                <version>1.1.4</version>
 				<executions>
 					<execution>
 						<id>start-container</id>
