--- a/pom.xml
+++ b/pom.xml
@@ -106,19 +106,26 @@
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
                 </plugin>
-
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.0.2</version>
                     <extensions>true</extensions>
                     <configuration>
-                        <dex>
-                          <jvmArguments>
-                            <jvmArgument>-Xms256m</jvmArgument>
-                            <jvmArgument>-Xmx512m</jvmArgument>
-                          </jvmArguments>
-                        </dex>
+                        <!--
+                        <proguard>
+                            <skip>false</skip>
+                            <config>../proguard.cfg</config>
+                        </proguard>
+                        -->
                         <sdk>
                             <platform>10</platform>
                         </sdk>
@@ -129,48 +136,6 @@
                             <verbose>true</verbose>
                         </zipalign>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
-                    <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>com.pyx4me</groupId>
-                    <artifactId>proguard-maven-plugin</artifactId>
-                    <version>2.0.4</version>
-                    <executions>
-                        <execution>
-                            <phase>process-classes</phase>
-                            <goals>
-                                <goal>proguard</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <!-- we need to override the dependency of the plugin to get a newer version of proguard -->
-                    <dependencies>
-                        <dependency>
-                            <groupId>net.sf.proguard</groupId>
-                            <artifactId>proguard</artifactId>
-                            <version>4.4</version>
-                            <scope>runtime</scope>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <proguardVersion>4.4</proguardVersion>
-                        <maxMemory>512m</maxMemory>
-                        <injar>android-classes</injar>
-                        <libs>
-                            <lib>${rt.jar.path}</lib>
-                            <lib>${jsse.jar.path}</lib>
-                        </libs>
-                        <obfuscate>false</obfuscate>
-                        <addMavenDescriptor>false</addMavenDescriptor>
-                        <proguardInclude>../proguard.cfg</proguardInclude> <!-- sadly, relative to sub-modules -->
                     </configuration>
                 </plugin>
             </plugins>
