--- a/proguard.cfg
+++ b/proguard.cfg
@@ -1,3 +1,14 @@
+-ignorewarnings
+-dontoptimize
+-dontobfuscate
+-dontskipnonpubliclibraryclasses
+
+-renamesourcefileattribute SourceFile
+
+-keepattributes SourceFile,LineNumberTable,*Annotation*
+
+-printmapping map.txt
+-printseeds seed.txt
 
 
 -keepclassmembers enum * { public static **[] values(); public static ** valueOf(java.lang.String); }
@@ -32,19 +43,7 @@
 -keep class * extends com.jcraft.jsch.KeyExchange
 -keep class com.jcraft.jsch.**
 
--dontskipnonpubliclibraryclasses
-
--ignorewarnings
 -verbose
-
--renamesourcefileattribute SourceFile
-
--keepattributes SourceFile,LineNumberTable,*Annotation*
-
--printmapping map.txt
--printseeds seed.txt
--ignorewarnings
--dontoptimize
 
 -keepclassmembers class com.google.inject.assistedinject.FactoryProvider2 { *; }
 
@@ -57,3 +56,4 @@
 
 -keepclassmembers class * extends android.app.Activity { public void *(android.view.View); }
 
+-keep class org.apache.commons.io.IOUtils
