adding proguard back in...

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -56,4 +56,8 @@
 
 -keepclassmembers class * extends android.app.Activity { public void *(android.view.View); }
 
--keep class org.apache.commons.io.IOUtils
+-keep class org.eclipse.jgit.transport.RemoteConfig { *; }
+-keep class org.apache.commons.io.IOUtils { *; }
+-keep class org.apache.commons.io.input.BoundedInputStream  { *; }
+-keepclassmembers class org.apache.commons.io.FileUtils { ** openOutputStream(...); }
+-keepclassmembers class com.madgag.agit.git.model.RDTTag
