Trying to fix this int test failure:
[INFO]     com.google.inject.ProvisionException: Guice provision errors:

1) Error in custom provider, java.lang.NullPointerException
while locating android.content.Context

1 error
at com.google.inject.InjectorImpl$4.get(InjectorImpl.java:767)
at roboguice.util.RoboThread.start(RoboThread.java:32)
at roboguice.util.RoboLooperThread.start(RoboLooperThread.java:23)
at com.madgag.agit.GitAsyncTaskTest.executeAndWaitFor(GitAsyncTaskTest.java:155)
at com.madgag.agit.GitAsyncTaskTest.testSimpleReadOnlyCloneFromGitHub(GitAsyncTaskTest.java:133)
at java.lang.reflect.Method.invokeNative(Native Method)
at android.test.InstrumentationTestCase.runMethod(InstrumentationTestCase.java:204)
at android.test.InstrumentationTestCase.runTest(InstrumentationTestCase.java:194)
at android.test.AndroidTestRunner.runTest(AndroidTestRunner.java:169)
at android.test.AndroidTestRunner.runTest(AndroidTestRunner.java:154)
at android.test.InstrumentationTestRunner.onStart(InstrumentationTestRunner.java:529)
at android.app.Instrumentation$InstrumentationThread.run(Instrumentation.java:1448)
Caused by: java.lang.NullPointerException
at roboguice.inject.ContextScope.getScopedObjectMap(ContextScope.java:156)
at roboguice.inject.ContextScope$1.get(ContextScope.java:136)
at com.google.inject.InternalFactoryToProviderAdapter.get(InternalFactoryToProviderAdapter.java:48)
at com.google.inject.InjectorImpl$4$1.call(InjectorImpl.java:758)
at com.google.inject.InjectorImpl.callInContext(InjectorImpl.java:804)
at com.google.inject.InjectorImpl$4.get(InjectorImpl.java:754)
... 17 more

[INFO]     End: com.madgag.agit.GitAsyncTaskTest#testSimpleReadOnlyCloneFromGitHub

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -10,6 +10,10 @@
 -printmapping map.txt
 -printseeds seed.txt
 
+-dontpreverify
+-repackageclasses ''
+-allowaccessmodification
+-dontwarn android.support.**
 
 -keepclassmembers enum * { public static **[] values(); public static ** valueOf(java.lang.String); }
 
@@ -60,4 +64,8 @@
 -keep class org.apache.commons.io.IOUtils { *; }
 -keep class org.apache.commons.io.input.BoundedInputStream  { *; }
 -keepclassmembers class org.apache.commons.io.FileUtils { ** openOutputStream(...); }
--keepclassmembers class com.madgag.agit.git.model.RDTTag
+-keep class com.madgag.agit.git.model.RDTTag$TagSummary { *; }
+-keep class roboguice.util.RoboAsyncTask$RoboTask { *; }
+-keep class roboguice.util.** extends java.lang.Runnable { *; }
+-keep class roboguice.util.RoboLooperThread { *; }
+-keep class * extends roboguice.util.RoboThread { *; }
