Currently failing robolectric tests

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
                     <version>3.0.2</version>
                     <extensions>true</extensions>
                     <configuration>
+                        <extractDuplicates>true</extractDuplicates>
                         <proguard>
                             <skip>false</skip>
                             <config>../proguard.cfg</config>
