--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -25,6 +25,11 @@
             <type>apklib</type>
 		</dependency>
         <dependency>
+          <groupId>android.support</groupId>
+          <artifactId>compatibility-v4</artifactId>
+          <version>r6</version>
+        </dependency>
+        <dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>lazy-drawables</artifactId>
 			<version>0.9</version>
@@ -63,27 +68,39 @@
 			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.roboguice</groupId>
-			<artifactId>roboguice</artifactId>
-			<version>1.1.1</version>
-		</dependency>
+        <dependency>
+          <groupId>com.google.inject</groupId>
+          <artifactId>guice</artifactId>
+          <version>3.0</version>
+          <classifier>no_aop</classifier>
+        </dependency>
+        <dependency>
+          <groupId>org.roboguice</groupId>
+          <artifactId>roboguice</artifactId>
+          <version>2.0b3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+            <version>3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.inject</groupId>
+                    <artifactId>guice</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>com.pivotallabs</groupId>
             <artifactId>robolectric</artifactId>
             <version>1.0-RC1</version>
             <scope>test</scope>
         </dependency>
-		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>2.0-no_aop</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.inject.extensions</groupId>
-			<artifactId>guice-assisted-inject</artifactId>
-			<version>2.0</version>
-		</dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>1.3.9</version>
+        </dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>util-diff</artifactId>
