Fix repoviewer... now displays

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -49,6 +49,7 @@
 
 -verbose
 
+-keep class javax.annotation.Nullable
 -keepclassmembers class com.google.inject.assistedinject.FactoryProvider2 { *; }
 -keepclassmembers class com.google.** {
     private void finalizeReferent();
