--- a/proguard.cfg
+++ b/proguard.cfg
@@ -1,24 +1,31 @@
+-ignorewarnings
+-dontoptimize
+-dontobfuscate
+-dontskipnonpubliclibraryclasses
+-verbose
+-renamesourcefileattribute SourceFile
+
+-keepattributes SourceFile,LineNumberTable,*Annotation*
+
+-printmapping map.txt
+-printseeds seed.txt
 
 
 -keepclassmembers enum * { public static **[] values(); public static ** valueOf(java.lang.String); }
 
 -keep class com.madgag.agit.**
 -keep class com.madgag.android.blockingprompt.**
+
 -keep public class * extends android.app.Activity
-
 -keep public class * extends android.app.Application
-
 -keep public class * extends android.app.Service
-
 -keep public class * extends android.content.BroadcastReceiver
-
-
 -keep public class * extends android.content.ContentProvider
-
-
 -keep public class * extends android.view.View { public <init>(android.content.Context); public <init>(android.content.Context, android.util.AttributeSet); public <init>(android.content.Context, android.util.AttributeSet, int); public void set*(...); }
+-keepclassmembers class * extends android.app.Activity { public void *(android.view.View); }
 
 -keep public class roboguice.**
+-keepclassmembers class * extends roboguice.application.RoboApplication { *; }
 -keep class com.google.inject.Binder
 -keep class com.google.inject.Key
 -keep class com.google.inject.Provider
@@ -32,28 +39,8 @@
 -keep class * extends com.jcraft.jsch.KeyExchange
 -keep class com.jcraft.jsch.**
 
--dontskipnonpubliclibraryclasses
-
--ignorewarnings
--verbose
-
--renamesourcefileattribute SourceFile
-
--keepattributes SourceFile,LineNumberTable,*Annotation*
-
--printmapping map.txt
--printseeds seed.txt
--ignorewarnings
--dontoptimize
-
 -keepclassmembers class com.google.inject.assistedinject.FactoryProvider2 { *; }
-
 
 -keep public class * extends junit.framework.TestCase
 
 -keepclassmembers class * { @com.google.inject.Provides *; @android.test.suitebuilder.annotation.* *; void test*(...); }
-
--keepclassmembers class * extends roboguice.application.RoboApplication { *; }
-
--keepclassmembers class * extends android.app.Activity { public void *(android.view.View); }
-
